# wikisource-poem-scraper

./: .gitignore  LICENSE  README.md  TDL.txt  pyproject.toml  validate_output.py
dumps/: download_enterprise_dumps.ps1
src/poemscraper/: _init_.py  api_client.py  classifier.py  clean_titles.py  cleaner.py  cli.py  core.py  database.py  debugger.py  enricher.py  explorer.html  json_visualizer.html  log_manager.py  offline_core.py  parsing.py  processors.py  results_analyzer.py  schemas.py  tree_comparator.html  tree_logger.py  tree_visualizer.html
src/scriptorium/: _init_.py  api_client.py  author_cleaner.py  classifier.py  cleaner.py  cli.py  core.py  corpus_comparator.html  database.py  debugger.py  dump_index.py  dump_readers.py  enricher.py  exceptions.py  explorer.html  json_visualizer.html  merger.py  models.py  offline_core.py  parsing.py  processors.py  results_analyzer.py  schemas.py  tree_comparator.html  tree_logger.py  tree_visualizer.html  utils.py
tests/: test_author_cleaner.py  test_parsing.py
